src/test/deca/context/valid/created/sans_objet/affectation_int_2.deca
// Description:
//    Programme minimaliste utilisant int.
//
// Resultats:
//   
//
// Historique:
//    cree le 01/01/2024

{
        int x ;
        x=2147483647; //nombre max un entier;
}