src/test/deca/context/invalid/created/sans_objet/affectation_int_3.deca
// Description:
//    Programme minimaliste utilisant int.
//
// Resultats:
//   erreur: ligne 12 : number format exception
//
// Historique:
//    cree le 01/01/2024

{
        int x ;
        x=  x=2147483648; //dépasse nombre max un entier;;
}